feat: implementacao funcional da estrutura